<resources>
    <string name="app_name">乔翼2018110235</string>
    <string name="title_music">Music</string>
    <string name="takephoto">Take Photo</string>
    <string name="title_photo">TakePhoto</string>
    <string name="title_weather">Weather</string>
    <string name="title_card">CardGame</string>
    <string name="reset">RESET</string>
    <string name="button">Click me</string>
    <string name="textView">hello World!</string>
    <string name="clicked">I am Clicked!</string>
    <string name="play">PLAY</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="musictitle">Music Player</string>
    <string name="title_helloworld">HelloWorld</string>
    <string name="title_calculator">Calcultor</string>
</resources>