<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<item
        android:id="@+id/navigation_helloworld"
        android:icon="@drawable/ic_helloworld_24"
        android:title="@string/title_helloworld" />-->
    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_cloud_24"
        android:title="@string/title_weather" />

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_game_24"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_photo"
        android:icon="@drawable/ic_camera_alt_24"
        android:title="@string/title_photo" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_calculator_24"
        android:title="@string/title_calculator" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music_24"
        android:title="@string/title_music" />

</menu>