<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_helloworld">

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.endapp.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_photo"
        android:name="com.example.endapp.ui.photo.PhotoFragment"
        android:label="@string/title_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.endapp.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_card"
        android:name="com.example.endapp.ui.game.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />
    <fragment
        android:id="@+id/navigation_helloworld"
        android:name="com.example.endapp.ui.helloworld.HelloworldFragment"
        android:label="@string/title_helloworld"
        tools:layout="@layout/fragment_helloworld" />


</navigation>