<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD8E89"
    android:clickable="false"
    tools:context=".ui.music.MusicFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/musictitle"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView_mn"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_count"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="411dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="#77ECFB" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPlay"
            android:text="@string/play"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onNext"
            android:text="@string/next"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onPrev"
            android:text="@string/prev"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onStop"
            android:text="@string/stop"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onPause"
            android:text="@string/pause"
            tools:ignore="OnClick" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>